--- a/academique.html
+++ b/academique.html
@@ -1,39 +1,206 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
 <meta charset="utf-8"/><script data-gage-theme-init="true">(function(){try{var t=localStorage.getItem("gage-theme");if(!t){t=(window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches)?"dark":"light";}if(t==="dark"){document.documentElement.classList.add("dark-mode");}}catch(e){}})();</script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Académique | École secondaire Gaétan‑Gervais</title>
+<title>Académique | École secondaire Gaétan-Gervais</title>
 <meta content="" name="description"/>
 <meta content="" name="keywords"/>
-<!-- Favicons -->
 <link href="assets/img/favicon.png" rel="icon"/>
 <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"/>
-<!-- Fonts -->
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet"/>
-<!-- Vendor CSS Files -->
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
 <link href="assets/vendor/aos/aos.css" rel="stylesheet"/>
 <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
 <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
-<!-- Main CSS File -->
 <link href="assets/css/main.css" rel="stylesheet"/>
-<!-- =======================================================
-  * Template Name: Mentor
-  * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+<style>
+/* ── Nav cards ───────────────────────────────────────── */
+.acad-section { padding: 60px 0 80px; }
+
+.acad-intro {
+  text-align: center;
+  max-width: 640px;
+  margin: 0 auto 52px;
+}
+.acad-intro h2 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 14px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-bottom: 10px;
+}
+.acad-intro p {
+  font-size: 15px;
+  color: var(--default-color);
+  line-height: 1.8;
+  opacity: .7;
+  margin: 0;
+}
+
+.acad-card {
+  display: block;
+  text-decoration: none;
+  border-radius: 16px;
+  border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  overflow: hidden;
+  height: 100%;
+  transition: box-shadow .3s, transform .3s, border-color .3s;
+  position: relative;
+}
+.acad-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 20px 48px color-mix(in srgb, var(--accent-color), transparent 78%);
+  border-color: color-mix(in srgb, var(--accent-color), transparent 60%);
+  text-decoration: none;
+}
+
+.acad-card-top {
+  padding: 40px 36px 32px;
+  position: relative;
+  overflow: hidden;
+}
+.acad-card-top::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  opacity: .07;
+  background: radial-gradient(circle at 80% 20%, var(--card-accent) 0%, transparent 65%);
+  pointer-events: none;
+}
+.acad-card-icon {
+  width: 60px; height: 60px;
+  border-radius: 14px;
+  display: flex; align-items: center; justify-content: center;
+  font-size: 28px;
+  margin-bottom: 22px;
+  position: relative;
+}
+.acad-card-top h3 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 26px;
+  letter-spacing: 2px;
+  margin: 0 0 10px;
+  position: relative;
+}
+.acad-card-top p {
+  font-size: 14px;
+  line-height: 1.7;
+  opacity: .75;
+  margin: 0;
+  position: relative;
+}
+
+.acad-card-bottom {
+  padding: 20px 36px 28px;
+  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
+}
+.acad-pill-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+.acad-pill {
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  padding: 4px 12px;
+  border-radius: 20px;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+}
+.acad-cta {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  letter-spacing: .5px;
+  transition: gap .2s;
+}
+.acad-card:hover .acad-cta { gap: 14px; }
+
+/* Colour themes */
+.card-cours {
+  --card-accent: #1976d2;
+  color: var(--default-color);
+}
+.card-cours .acad-card-icon { background: rgba(25,118,210,.12); color: #1976d2; }
+.card-cours .acad-card-top h3 { color: var(--heading-color); }
+.card-cours .acad-card-top p { color: var(--default-color); }
+.card-cours .acad-pill { background: rgba(25,118,210,.1); color: #1976d2; }
+.card-cours .acad-cta { color: #1976d2; }
+
+.card-prog {
+  --card-accent: #6a1b9a;
+  color: var(--default-color);
+}
+.card-prog .acad-card-icon { background: rgba(106,27,154,.12); color: #6a1b9a; }
+.card-prog .acad-card-top h3 { color: var(--heading-color); }
+.card-prog .acad-card-top p { color: var(--default-color); }
+.card-prog .acad-pill { background: rgba(106,27,154,.1); color: #6a1b9a; }
+.card-prog .acad-cta { color: #6a1b9a; }
+
+/* Stats strip */
+.acad-stats {
+  display: flex;
+  justify-content: center;
+  gap: 48px;
+  flex-wrap: wrap;
+  padding: 40px 0 0;
+  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
+  margin-top: 56px;
+}
+.acad-stat { text-align: center; }
+.acad-stat-num {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 42px;
+  letter-spacing: 2px;
+  color: var(--accent-color);
+  line-height: 1;
+  display: block;
+}
+.acad-stat-label {
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  color: var(--default-color);
+  opacity: .5;
+  margin-top: 4px;
+  display: block;
+}
+
+/* Dark mode */
+html.dark-mode .acad-card {
+  border-color: rgba(255,255,255,.1);
+}
+html.dark-mode .acad-card-bottom {
+  border-color: rgba(255,255,255,.08);
+}
+html.dark-mode .acad-card-top p,
+html.dark-mode .acad-intro p {
+  opacity: 1;
+  color: #b0b0b0;
+}
+html.dark-mode .acad-stats {
+  border-color: rgba(255,255,255,.08);
+}
+</style>
 </head>
-<body class="courses-page">
+<body class="starter-page-page">
 <div id="header-placeholder"></div>
 <script src="assets/js/include-header.js"></script>
 <main class="main">
+
 <!-- Page Title -->
 <div class="page-title" data-aos="fade">
 <div class="heading">
@@ -41,7 +208,7 @@
 <div class="row d-flex justify-content-center text-center">
 <div class="col-lg-8">
 <h1>Académique</h1>
-<p class="mb-0">Programmes, parcours et ressources pédagogiques (contenu à compléter).</p>
+<p class="mb-0">Explorez les programmes, les cours et les parcours d'excellence de Gaétan-Gervais.</p>
 </div>
 </div>
 </div>
@@ -49,106 +216,99 @@
 <nav class="breadcrumbs">
 <div class="container">
 <ol>
-<li><a href="index.html">Accueil</a></li>
+<li><a href="/ESGAGE/index.html">Accueil</a></li>
 <li class="current">Académique</li>
 </ol>
 </div>
 </nav>
-</div><!-- End Page Title -->
-<!-- Courses Section -->
-<section class="courses section" id="courses">
+</div>
+
+<!-- Main section -->
+<section class="acad-section section">
 <div class="container">
-<div class="row">
-<div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-<div class="course-item">
-<img alt="..." class="img-fluid" src="assets/img/course-1.jpg"/>
-<div class="course-content">
-<div class="d-flex justify-content-between align-items-center mb-3">
-<p class="category">Web Development</p>
-<p class="price">$169</p>
+
+  <div class="acad-intro" data-aos="fade-up">
+    <h2>Notre offre académique</h2>
+    <p>Gaétan-Gervais offre plus de 120 cours répartis dans 10 matières, ainsi que des programmes spécialisés pour les élèves qui souhaitent aller plus loin.</p>
+  </div>
+
+  <div class="row gy-4 justify-content-center">
+
+    <!-- Nos cours -->
+    <div class="col-lg-5 col-md-6" data-aos="fade-up" data-aos-delay="100">
+      <a class="acad-card card-cours" href="/ESGAGE/cours.html">
+        <div class="acad-card-top">
+          <div class="acad-card-icon"><i class="bi bi-book-fill"></i></div>
+          <h3>Nos cours</h3>
+          <p>Consultez l'ensemble des cours offerts de la 9<sup>e</sup> à la 12<sup>e</sup> année, organisés par matière avec les parcours et préalables pour chaque filière.</p>
+        </div>
+        <div class="acad-card-bottom">
+          <div class="acad-pill-list">
+            <span class="acad-pill"><i class="bi bi-mortarboard-fill"></i> Pré-Universitaire</span>
+            <span class="acad-pill"><i class="bi bi-building"></i> Pré-Collégial</span>
+            <span class="acad-pill"><i class="bi bi-globe"></i> Ouvert</span>
+            <span class="acad-pill"><i class="bi bi-grid"></i> 10 matières</span>
+            <span class="acad-pill"><i class="bi bi-journals"></i> 120+ cours</span>
+          </div>
+          <span class="acad-cta">Explorer les cours <i class="bi bi-arrow-right"></i></span>
+        </div>
+      </a>
+    </div>
+
+    <!-- Programmes spécialisés -->
+    <div class="col-lg-5 col-md-6" data-aos="fade-up" data-aos-delay="200">
+      <a class="acad-card card-prog" href="/ESGAGE/programmes-specialises.html">
+        <div class="acad-card-top">
+          <div class="acad-card-icon"><i class="bi bi-award-fill"></i></div>
+          <h3>Programmes spécialisés</h3>
+          <p>Découvrez nos programmes enrichis — Baccalauréat international et Majeur en haute spécialisation en Sports et en TIC — pour les élèves qui visent l'excellence.</p>
+        </div>
+        <div class="acad-card-bottom">
+          <div class="acad-pill-list">
+            <span class="acad-pill"><i class="bi bi-globe2"></i> Baccalauréat international</span>
+            <span class="acad-pill"><i class="bi bi-trophy-fill"></i> MHS Sports</span>
+            <span class="acad-pill"><i class="bi bi-cpu-fill"></i> MHS TIC</span>
+          </div>
+          <span class="acad-cta">Voir les programmes <i class="bi bi-arrow-right"></i></span>
+        </div>
+      </a>
+    </div>
+
+  </div>
+
+  <!-- Stats strip -->
+  <div class="acad-stats" data-aos="fade-up" data-aos-delay="100">
+    <div class="acad-stat">
+      <span class="acad-stat-num">120+</span>
+      <span class="acad-stat-label">Cours offerts</span>
+    </div>
+    <div class="acad-stat">
+      <span class="acad-stat-num">10</span>
+      <span class="acad-stat-label">Matières</span>
+    </div>
+    <div class="acad-stat">
+      <span class="acad-stat-num">3</span>
+      <span class="acad-stat-label">Programmes spécialisés</span>
+    </div>
+    <div class="acad-stat">
+      <span class="acad-stat-num">9–12</span>
+      <span class="acad-stat-label">Années couvertes</span>
+    </div>
+  </div>
+
 </div>
-<h3><a href="course-details.html">Website Design</a></h3>
-<p class="description">Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-<div class="trainer d-flex justify-content-between align-items-center">
-<div class="trainer-profile d-flex align-items-center">
-<img alt="" class="img-fluid" src="assets/img/trainers/trainer-1-2.jpg"/>
-<a class="trainer-link" href="">Antonio</a>
-</div>
-<div class="trainer-rank d-flex align-items-center">
-<i class="bi bi-person user-icon"></i> 50
-                      
-                    <i class="bi bi-heart heart-icon"></i> 65
-                  </div>
-</div>
-</div>
-</div>
-</div> <!-- End Course Item-->
-<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-<div class="course-item">
-<img alt="..." class="img-fluid" src="assets/img/course-2.jpg"/>
-<div class="course-content">
-<div class="d-flex justify-content-between align-items-center mb-3">
-<p class="category">Marketing</p>
-<p class="price">$250</p>
-</div>
-<h3><a href="course-details.html">Search Engine Optimization</a></h3>
-<p class="description">Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-<div class="trainer d-flex justify-content-between align-items-center">
-<div class="trainer-profile d-flex align-items-center">
-<img alt="" class="img-fluid" src="assets/img/trainers/trainer-2-2.jpg"/>
-<a class="trainer-link" href="">Lana</a>
-</div>
-<div class="trainer-rank d-flex align-items-center">
-<i class="bi bi-person user-icon"></i> 35
-                      
-                    <i class="bi bi-heart heart-icon"></i> 42
-                  </div>
-</div>
-</div>
-</div>
-</div> <!-- End Course Item-->
-<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-<div class="course-item">
-<img alt="..." class="img-fluid" src="assets/img/course-3.jpg"/>
-<div class="course-content">
-<div class="d-flex justify-content-between align-items-center mb-3">
-<p class="category">Content</p>
-<p class="price">$180</p>
-</div>
-<h3><a href="course-details.html">Copywriting</a></h3>
-<p class="description">Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-<div class="trainer d-flex justify-content-between align-items-center">
-<div class="trainer-profile d-flex align-items-center">
-<img alt="" class="img-fluid" src="assets/img/trainers/trainer-3-2.jpg"/>
-<a class="trainer-link" href="">Brandon</a>
-</div>
-<div class="trainer-rank d-flex align-items-center">
-<i class="bi bi-person user-icon"></i> 20
-                      
-                    <i class="bi bi-heart heart-icon"></i> 85
-                  </div>
-</div>
-</div>
-</div>
-</div> <!-- End Course Item-->
-</div>
-</div>
-</section><!-- /Courses Section -->
+</section>
+
 </main>
 <div id="footer-placeholder"></div>
 <script src="assets/js/include-footer.js"></script>
-<!-- Scroll Top -->
 <a class="scroll-top d-flex align-items-center justify-content-center" href="#" id="scroll-top"><i class="bi bi-arrow-up-short"></i></a>
-<!-- Preloader -->
 <div id="preloader"></div>
-<!-- Vendor JS Files -->
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/php-email-form/validate.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-<!-- Main JS File -->
 <script src="assets/js/main.js"></script>
 </body>
 </html>
