--- a/academique.html
+++ b/academique.html
@@ -17,184 +17,7 @@
 <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
 <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 <link href="assets/css/main.css" rel="stylesheet"/>
-<style>
-/* ── Nav cards ───────────────────────────────────────── */
-.acad-section { padding: 60px 0 80px; }
-
-.acad-intro {
-  text-align: center;
-  max-width: 640px;
-  margin: 0 auto 52px;
-}
-.acad-intro h2 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 14px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: var(--accent-color);
-  margin-bottom: 10px;
-}
-.acad-intro p {
-  font-size: 15px;
-  color: var(--default-color);
-  line-height: 1.8;
-  opacity: .7;
-  margin: 0;
-}
-
-.acad-card {
-  display: block;
-  text-decoration: none;
-  border-radius: 16px;
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
-  overflow: hidden;
-  height: 100%;
-  transition: box-shadow .3s, transform .3s, border-color .3s;
-  position: relative;
-}
-.acad-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 20px 48px color-mix(in srgb, var(--accent-color), transparent 78%);
-  border-color: color-mix(in srgb, var(--accent-color), transparent 60%);
-  text-decoration: none;
-}
-
-.acad-card-top {
-  padding: 40px 36px 32px;
-  position: relative;
-  overflow: hidden;
-}
-.acad-card-top::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  opacity: .07;
-  background: radial-gradient(circle at 80% 20%, var(--card-accent) 0%, transparent 65%);
-  pointer-events: none;
-}
-.acad-card-icon {
-  width: 60px; height: 60px;
-  border-radius: 14px;
-  display: flex; align-items: center; justify-content: center;
-  font-size: 28px;
-  margin-bottom: 22px;
-  position: relative;
-}
-.acad-card-top h3 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 26px;
-  letter-spacing: 2px;
-  margin: 0 0 10px;
-  position: relative;
-}
-.acad-card-top p {
-  font-size: 14px;
-  line-height: 1.7;
-  opacity: .75;
-  margin: 0;
-  position: relative;
-}
-
-.acad-card-bottom {
-  padding: 20px 36px 28px;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
-}
-.acad-pill-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-bottom: 24px;
-}
-.acad-pill {
-  font-size: 12px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  padding: 4px 12px;
-  border-radius: 20px;
-  display: inline-flex;
-  align-items: center;
-  gap: 5px;
-}
-.acad-cta {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: .5px;
-  transition: gap .2s;
-}
-.acad-card:hover .acad-cta { gap: 14px; }
-
-/* Colour themes */
-.card-cours {
-  --card-accent: #1976d2;
-  color: var(--default-color);
-}
-.card-cours .acad-card-icon { background: rgba(25,118,210,.12); color: #1976d2; }
-.card-cours .acad-card-top h3 { color: var(--heading-color); }
-.card-cours .acad-card-top p { color: var(--default-color); }
-.card-cours .acad-pill { background: rgba(25,118,210,.1); color: #1976d2; }
-.card-cours .acad-cta { color: #1976d2; }
-
-.card-prog {
-  --card-accent: #6a1b9a;
-  color: var(--default-color);
-}
-.card-prog .acad-card-icon { background: rgba(106,27,154,.12); color: #6a1b9a; }
-.card-prog .acad-card-top h3 { color: var(--heading-color); }
-.card-prog .acad-card-top p { color: var(--default-color); }
-.card-prog .acad-pill { background: rgba(106,27,154,.1); color: #6a1b9a; }
-.card-prog .acad-cta { color: #6a1b9a; }
-
-/* Stats strip */
-.acad-stats {
-  display: flex;
-  justify-content: center;
-  gap: 48px;
-  flex-wrap: wrap;
-  padding: 40px 0 0;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
-  margin-top: 56px;
-}
-.acad-stat { text-align: center; }
-.acad-stat-num {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 42px;
-  letter-spacing: 2px;
-  color: var(--accent-color);
-  line-height: 1;
-  display: block;
-}
-.acad-stat-label {
-  font-size: 12px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  color: var(--default-color);
-  opacity: .5;
-  margin-top: 4px;
-  display: block;
-}
-
-/* Dark mode */
-html.dark-mode .acad-card {
-  border-color: rgba(255,255,255,.1);
-}
-html.dark-mode .acad-card-bottom {
-  border-color: rgba(255,255,255,.08);
-}
-html.dark-mode .acad-card-top p,
-html.dark-mode .acad-intro p {
-  opacity: 1;
-  color: #b0b0b0;
-}
-html.dark-mode .acad-stats {
-  border-color: rgba(255,255,255,.08);
-}
-</style>
+<link href="assets/css/academique.css" rel="stylesheet"/>
 </head>
 <body class="starter-page-page">
 <div id="header-placeholder"></div>
