--- a/programmes-specialises.html
+++ b/programmes-specialises.html
@@ -17,202 +17,7 @@
 <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
 <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 <link href="assets/css/main.css" rel="stylesheet"/>
-<style>
-/* ── Programme cards ─────────────────────────────────── */
-.prog-section { padding: 60px 0; }
-.prog-section + .prog-section { padding-top: 0; }
-
-.prog-header {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  margin-bottom: 36px;
-  padding-bottom: 18px;
-  border-bottom: 2px solid color-mix(in srgb, var(--accent-color), transparent 80%);
-}
-.prog-header-icon {
-  width: 52px; height: 52px;
-  border-radius: 12px;
-  background: color-mix(in srgb, var(--accent-color), transparent 88%);
-  display: flex; align-items: center; justify-content: center;
-  font-size: 24px;
-  color: var(--accent-color);
-  flex-shrink: 0;
-}
-.prog-header-text h2 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 28px;
-  letter-spacing: 2px;
-  color: var(--heading-color);
-  margin: 0 0 4px;
-}
-.prog-header-text p {
-  font-size: 14px;
-  color: var(--default-color);
-  opacity: .65;
-  margin: 0;
-}
-
-/* Card */
-.prog-card {
-  border-radius: 14px;
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
-  background: var(--surface-color, #fff);
-  overflow: hidden;
-  height: 100%;
-  transition: box-shadow .25s, transform .25s;
-}
-.prog-card:hover {
-  box-shadow: 0 12px 36px color-mix(in srgb, var(--accent-color), transparent 82%);
-  transform: translateY(-4px);
-}
-.prog-card-accent {
-  height: 5px;
-}
-.prog-card-body {
-  padding: 28px 28px 24px;
-}
-.prog-badge {
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 11px;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  padding: 4px 10px;
-  border-radius: 20px;
-  margin-bottom: 14px;
-}
-.prog-card-body h3 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 22px;
-  letter-spacing: 1.5px;
-  color: var(--heading-color);
-  margin: 0 0 10px;
-  line-height: 1.2;
-}
-.prog-card-body p {
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--default-color);
-  opacity: .8;
-  margin: 0 0 20px;
-}
-.prog-features {
-  list-style: none;
-  padding: 0; margin: 0 0 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.prog-features li {
-  display: flex;
-  align-items: flex-start;
-  gap: 9px;
-  font-size: 13.5px;
-  color: var(--default-color);
-  line-height: 1.5;
-}
-.prog-features li i {
-  margin-top: 2px;
-  flex-shrink: 0;
-  font-size: 14px;
-}
-.prog-divider {
-  border: none;
-  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 88%);
-  margin: 0 0 16px;
-}
-.prog-meta {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-.prog-tag {
-  font-size: 12px;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  padding: 3px 10px;
-  border-radius: 6px;
-  background: color-mix(in srgb, var(--default-color), transparent 92%);
-  color: var(--default-color);
-}
-
-/* Dark mode fixes */
-html.dark-mode .prog-card {
-  background: color-mix(in srgb, var(--surface-color, #1a1a2e), transparent 0%);
-  border-color: rgba(255,255,255,0.1);
-}
-html.dark-mode .prog-card-body p,
-html.dark-mode .prog-features li {
-  color: #d0d0d0;
-  opacity: 1;
-}
-html.dark-mode .prog-tag {
-  background: rgba(255,255,255,0.1);
-  color: #e0e0e0;
-}
-html.dark-mode .prog-divider {
-  border-color: rgba(255,255,255,0.12);
-}
-html.dark-mode .prog-header-text p {
-  color: #b0b0b0;
-  opacity: 1;
-}
-html.dark-mode .prog-intro p {
-  color: #c0c0c0;
-  opacity: 1;
-}
-
-/* Colour themes */
-.theme-bi  { --pc: #1565c0; --pc-light: rgba(21,101,192,.12); }
-.theme-mhs-sport { --pc: #2e7d32; --pc-light: rgba(46,125,50,.12); }
-.theme-mhs-tic   { --pc: #6a1b9a; --pc-light: rgba(106,27,154,.12); }
-
-.prog-card-accent.theme-bi   { background: var(--pc); }
-.prog-card-accent.theme-mhs-sport { background: var(--pc); }
-.prog-card-accent.theme-mhs-tic   { background: var(--pc); }
-
-.prog-badge.theme-bi   { background: var(--pc-light); color: var(--pc); }
-.prog-badge.theme-mhs-sport { background: var(--pc-light); color: var(--pc); }
-.prog-badge.theme-mhs-tic   { background: var(--pc-light); color: var(--pc); }
-
-.prog-features li i.theme-bi   { color: var(--pc); }
-.prog-features li i.theme-mhs-sport { color: var(--pc); }
-.prog-features li i.theme-mhs-tic   { color: var(--pc); }
-
-/* Intro banner */
-.prog-intro {
-  background: color-mix(in srgb, var(--accent-color), transparent 93%);
-  border-radius: 16px;
-  padding: 32px 36px;
-  margin-bottom: 48px;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-.prog-intro i {
-  font-size: 36px;
-  color: var(--accent-color);
-}
-.prog-intro h2 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 22px;
-  letter-spacing: 2px;
-  color: var(--heading-color);
-  margin: 0 0 4px;
-}
-.prog-intro p {
-  font-size: 14px;
-  color: var(--default-color);
-  opacity: .7;
-  margin: 0;
-  max-width: 640px;
-}
-</style>
+<link href="assets/css/programmes-specialises.css" rel="stylesheet"/>
 </head>
 <body class="starter-page-page">
 <div id="header-placeholder"></div>
